# LightingEffects

./: .gitignore  CMakeLists.txt  GenerateProject.bat  LICENSE  LightingEffects.lnk  README.md
Source/: Actor.h  Component.h  D3D12RHI.cpp  D3D12RHI.h  D3D12RenderContext.h  D3D12Utility.h  Engine.cpp  Engine.h  Main.cpp  RefCountPtr.cpp  RefCountPtr.h  Scene.h  Shader.hlsl  Win32Application.cpp  Win32Application.h
Source/TestCases/: TestMain.cpp
